footer güncellemesi ve içerik ekleme
footer güncellemesi yapıldı, içerikler güncellendi

--- a/giris.html
+++ b/giris.html
@@ -180,7 +180,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="row">
                                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                                         <label>
-                                                            <input name="hatirla" value="1" type="checkbox"> beni hatırla
+                                                            <input name="hatirla" value="1" type="checkbox"> Beni Hatırla
                                                         </label>
                                                     </div>
                                                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
@@ -232,7 +232,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <div class="col col-md-12 col-sm-12 col-xs-12 mt-10 mb-20">
 
                                                             <label>
-                                                                    <input name="hatirla" value="1" type="checkbox"> <a href="sozlesme.html" target="_blank">Sözleşmeyi</a>  okudum onaylıyorum
+                                                                    <input name="hatirla" value="1" type="checkbox"> <a href="sozlesme.html" target="_blank"><font color="red">Mesafeli Satış Sözleşmesini</font></a> Okudum Onaylıyorum.
                                                             </label>
 
                                                         </div>
@@ -290,10 +290,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
               <div class="col col-md-3">
                   <h6>Sözleşmeler</h6>
-                  <a href="#">Satış Sözleşmesi</a>
-                  <a href="#">Gizlilik Sözleşmesi</a>
-                  <a href="#">Hizmet Sözleşmesi</a>
-                  <a href="#">Kullanım Koşulları</a>
+                  <a href="sozlesme.html">Satış Sözleşmesi</a>
+                  <a href="sozlesme.html">Gizlilik Sözleşmesi</a>
+                  <a href="sozlesme.html">Hizmet Sözleşmesi</a>
+                  <a href="sozlesme.html">Kullanım Koşulları</a>
                 </div>
             </div>
         </div>
