--- a/iletisim.html
+++ b/iletisim.html
@@ -267,11 +267,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="col col-md-3">
                     <h6>Sözleşmeler</h6>
-                    <a href="#">Satış Sözleşmesi</a>
-                    <a href="#">Gizlilik Sözleşmesi</a>
-                    <a href="#">Hizmet Sözleşmesi</a>
-                    <a href="#">Kullanım Koşulları</a>
-                </div>
+                    <a href="sozlesme.html">Satış Sözleşmesi</a>
+                    <a href="sozlesme.html">Gizlilik Sözleşmesi</a>
+                    <a href="sozlesme.html">Hizmet Sözleşmesi</a>
+                    <a href="sozlesme.html">Kullanım Koşulları</a>
+                  </div>
             </div>
         </div>
         <!-- end footer-links -->
