--- a/kayit.html
+++ b/kayit.html
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <div class="row">
                                                 <div class="col-lg-6">
                                                     <label>
-                                                        <input name="hatirla" value="1" type="checkbox"> beni hatırla
+                                                        <input name="hatirla" value="1" type="checkbox"> Beni Hatırla
                                                     </label>
                                                 </div>
                                                 <div class="col-lg-6">
@@ -226,13 +226,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 <br>
                                                 <i>En az 1 büyük harf ve en az 1 rakam içermelidir.</i>
                                             </div>
-											
-						                    <div class="col col-md-12 col-sm-12 col-xs-12 mt-10 mb-20">
-                                                
-                                                <label>
-                                                        <input name="hatirla" value="1" type="checkbox"> <a href="sozlesme.html" target="_blank">Sözleşmeyi</a>  okudum onaylıyorum
-                                                </label>
 
+						                    <div class="col col-md-12 col-sm-12 col-xs-12 mt-10 mb-20">
+
+                                  <label>
+                                          <input name="hatirla" value="1" type="checkbox"> <a href="sozlesme.html" target="_blank"><font color="red">Mesafeli Satış Sözleşmesini</font></a> Okudum Onaylıyorum.
+                                  </label>
                                             </div>
 
                                             <div class="col col-md-12 col-sm-12 col-xs-12">
@@ -284,11 +283,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="col col-md-3">
                 <h6>Sözleşmeler</h6>
-                <a href="#">Satış Sözleşmesi</a>
-                <a href="#">Gizlilik Sözleşmesi</a>
-                <a href="#">Hizmet Sözleşmesi</a>
-                <a href="#">Kullanım Koşulları</a>
-                </div>
+                <a href="sozlesme.html">Satış Sözleşmesi</a>
+                <a href="sozlesme.html">Gizlilik Sözleşmesi</a>
+                <a href="sozlesme.html">Hizmet Sözleşmesi</a>
+                <a href="sozlesme.html">Kullanım Koşulları</a>
+              </div>
             </div>
         </div>
         <!-- end footer-links -->
