--- a/kurumsal.html
+++ b/kurumsal.html
@@ -157,13 +157,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <ul>
                             <li><a href="#biz-kimiz">Biz Kimiz?</a></li>
                             <li><a href="#neden">Neden Gomail?</a></li>
-                            <li><a href="#politikalar">Politikalarımız</a></li>
+                            <li id="biz-kimiz"><a href="#politikalar">Politikalarımız</a></li>
                         </ul>
                     </nav>
                     <!-- end #page-nav-menu -->
 
                     <!-- biz-kimiz -->
-                    <div id="biz-kimiz" class="g-item">
+                    <div class="g-item">
                         <div class="row">
                             <div class="col-md-6">
                                 <h1>Biz Kimiz?</h1>
@@ -177,12 +177,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                         </div>
                     </div>
+                    <p id="neden"></p>
                     <!-- end #biz-kimiz -->
 
                 </div>
 
                 <!-- basliklar -->
-                <section class="basliklar" id="neden">
+                <section class="basliklar">
                     <div class="container relative">
 
                         <div class="g-item">
@@ -220,13 +221,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </a>
                             </div>
                         </div>
-
+<p id="politikalar"></p>
                     </div>
                 </section>
                 <!-- end #basliklar -->
 
                 <!-- politikalar -->
-                <div id="politikalar" class="g-item">
+                <div class="g-item">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
@@ -246,7 +247,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- end #politikalar -->
 
                 <!-- politikalar -->
-                <div id="politikalar" class="g-item">
+                <div class="g-item">
                     <div class="container">
                         <div class="row">
                             <div class="politika-img col-md-6">
@@ -323,10 +324,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
               <div class="col col-md-3">
                   <h6>Sözleşmeler</h6>
-                  <a href="#">Satış Sözleşmesi</a>
-                  <a href="#">Gizlilik Sözleşmesi</a>
-                  <a href="#">Hizmet Sözleşmesi</a>
-                  <a href="#">Kullanım Koşulları</a>
+                  <a href="sozlesme.html">Satış Sözleşmesi</a>
+                  <a href="sozlesme.html">Gizlilik Sözleşmesi</a>
+                  <a href="sozlesme.html">Hizmet Sözleşmesi</a>
+                  <a href="sozlesme.html">Kullanım Koşulları</a>
                 </div>
             </div>
         </div>
