--- a/toplu-mail-gonderim-servisi.html
+++ b/toplu-mail-gonderim-servisi.html
@@ -153,7 +153,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="page-box">
                 <div class="container">
 
+                  <!-- page-nav-menu -->
+                  <nav class="page-nav-menu">
+                      <ul>
+                          <li><a href="#transactional">Transactional E-Mail</a></li>
+                          <li><a href="#dogrulama">E-Mail Doğrulama</a></li>
+                          <li><a href="#api">API Entegrasyonu</a></li>
+                          <li><a href="#kampanya">Kampanya Yönetimi</a></li>
+                          <li id="biz-kimiz"><a href="#e-bulten">E-Bülten Yönetimi</a></li>
+                      </ul>
+                      <p id="transactional"></p>
+                  </nav>
+                  <!-- end #page-nav-menu -->
+
+
+
                     <!-- servisler -->
+
                     <div id="servisler" class="g-item">
                         <div class="container">
                             <div class="row">
@@ -177,6 +193,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                             </div>
                         </div>
+                          <p id="dogrulama"></p>
                     </div>
                     <!-- end #servisler -->
 
@@ -201,6 +218,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                             </div>
                         </div>
+                        <p id="api"></p>
                     </div>
                     <!-- end #servisler -->
 
@@ -220,6 +238,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                             </div>
                         </div>
+                        <p id="kampanya"></p>
                     </div>
                     <!-- end #servisler -->
 
@@ -241,6 +260,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                             </div>
                         </div>
+                        <p id="e-bulten"></p>
                     </div>
                     <!-- end #servisler -->
 
@@ -301,10 +321,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
               <div class="col col-md-3">
                   <h6>Sözleşmeler</h6>
-                  <a href="#">Satış Sözleşmesi</a>
-                  <a href="#">Gizlilik Sözleşmesi</a>
-                  <a href="#">Hizmet Sözleşmesi</a>
-                  <a href="#">Kullanım Koşulları</a>
+                  <a href="sozlesme.html">Satış Sözleşmesi</a>
+                  <a href="sozlesme.html">Gizlilik Sözleşmesi</a>
+                  <a href="sozlesme.html">Hizmet Sözleşmesi</a>
+                  <a href="sozlesme.html">Kullanım Koşulları</a>
                 </div>
             </div>
         </div>
