--- a/aktivasyon-hata.html
+++ b/aktivasyon-hata.html
@@ -113,7 +113,7 @@
                     <div class="right">
 
                         <div class="top-buttons">
-                            <a href="giris.html" class="btn btn-login"><i class="fa fa-user"></i> Giriş Yap</a>
+                            <a href="giris.html" class="btn btn-login1"><i class="fa fa-user"></i> Giriş Yap</a>
                             <a href="kayit.html" class="btn btn-white">Kayıt Ol</a>
                         </div>
 
@@ -131,38 +131,21 @@
         <div class="full-container">
 
             <!-- #page-image -->
-            <div class="page-image" style="background-image:url(assets/img/kurumsal.jpg)">
+            <div class="page-image" style="background-image:url(assets/img/404.jpg)">
                 <div class="container">
                     <div class="table-cell">
                         <div class="page-title">
-                            <h1>GoMail Blog</h1>
-                            <ol class="breadcrumb">
-                                <li><a href="index.html">Anasayfa</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                            </ol>
+                            <h1>Hata</h1>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- END #page-image -->
 
-            <div class="container">
-
-                <div class="blog">
-
-                    <!-- item -->
-                    <div class="blogItem">
-                        <div class="blogItem-img" style="background-image:url(assets/img/blog/1.jpg)"></div>
-                        <h1>Lorem ipsum dolor sit amet, consectetur.</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi consequuntur facere veniam sunt itaque voluptatem tenetur sapiente, sint ipsum. Quae sit qui libero unde, fugit doloremque quibusdam veniam eum quasi.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum ullam, eligendi esse laudantium veritatis. Repellendus illum, eius a placeat maiores, blanditiis quam dolore. Unde deleniti magni iusto laudantium magnam
-                            perspiciatis at, qui illo tempora praesentium voluptatem quia obcaecati saepe ipsa.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet sequi, tenetur necessitatibus libero voluptates quaerat culpa a obcaecati dolorum excepturi eaque quod voluptatem praesentium, nulla ut architecto quam, maxime tempora quibusdam animi ipsum. Nesciunt omnis asperiores, quae mollitia molestias! Error quaerat doloribus asperiores harum facilis nostrum, atque quas alias nihil nemo odio non rem ullam ipsa libero eaque saepe consequuntur nisi sit cum quae architecto? Quia incidunt dolor eveniet dolores, maiores culpa odio minima nemo optio facere atque ratione, iusto facilis dicta nam nobis sequi placeat ipsa ullam assumenda laborum, ea ad voluptatum vitae! Mollitia, ad. Modi distinctio aperiam, repellendus.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus repellat excepturi odit cum dicta corporis. Consequuntur exercitationem natus ducimus minus iusto itaque, nesciunt tenetur quam, unde aut. Assumenda veniam earum blanditiis magnam sunt, architecto cupiditate aut laboriosam similique, dolorum odit harum quia quae sapiente optio at reiciendis officiis dolores, cum atque repellat nihil, animi cumque non? Harum odit eaque nam. Dolores odit autem consequuntur perspiciatis, minus fuga voluptatem nisi earum sequi aliquam quisquam veritatis cupiditate itaque consectetur eligendi, ducimus id ad excepturi soluta! Optio corrupti iure repellat illo, eaque, quidem quasi aut debitis voluptas. Commodi error iste dolores, consequuntur, iusto officiis. Quis repudiandae dignissimos, velit nemo ducimus harum hic expedita impedit rem est alias cumque ipsum quos error ullam corporis nisi, facilis magni sapiente aperiam quia, mollitia nostrum. Ex, minima similique corrupti quae possimus hic quis quos nulla reiciendis enim deserunt nihil ut iusto numquam modi, laborum dolore quasi neque placeat dolorem! Magni temporibus, amet maiores! Nobis aperiam sequi officia veniam qui, voluptatibus, quam quidem obcaecati architecto dolorum quaerat exercitationem expedita aliquid et cum laborum quia, error vero delectus saepe iste tempora soluta. Excepturi expedita quod molestias labore porro, fugiat, dicta placeat. Minima saepe tempora quod, nemo, dicta cupiditate itaque.</p>
-                    </div>
-
-                </div>
-
+            <div class="dortyuzdort">
+                <img src="assets/img/404.svg" alt="">
+                <p>Kullanıcı aktifleştirilemedi</p>
+                <a href="index.html" class="btn btn-blue">Anasayfa'ya Dön</a>
             </div>
 
         </div>
