--- a/index.html
+++ b/index.html
@@ -47,27 +47,26 @@
 
 <body>
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBZR3WZ"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TBZR3WZ"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript" >
+     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+     m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(51093581, "init", {
-        id:51093581,
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/51093581" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
-
+     ym(51093581, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true,
+          webvisor:true
+     });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/51093581" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
+  
     <!-- header -->
     <header>
         <div class="container">
@@ -351,8 +350,8 @@ alınabilir.</p>
             <p>Avantajlı fırsatlardan haberdar olmak için e-bültenimize abone olun.</p>
             <!-- newsletter-form -->
             <div id="newsletter-form">
-                <form action="#">
-                    <input class="arama" id="Text1" autocomplete="off" type="text" maxlength="70" placeholder="E-Posta Adresi">
+                <form id="form" action="https://portal.gomail.com.tr/iletisimgomail/islem.aspx?p=abone" method="post" novalidate="novalidate">
+                    <input class="arama" id="txtEposta" name="txtEposta" autocomplete="off" type="text" maxlength="70" placeholder="E-Posta Adresi">
                     <button class="getir btn btn-blue">Kayıt Ol</button>
                 </form>
             </div>
