sayfa metod değişiklikleri
bağlantı metod anahtarları değiştirildi

--- a/aktivasyon.html
+++ b/aktivasyon.html
@@ -156,7 +156,7 @@
                             <!-- aktivasyon-->
                             <div class="tab-pane animated fadeIn active in" id="aktivasyon">
                                 <div id="register-form-container">
-                                    <form id="form" action="https://portal.gomail.com.tr/iletisimgomail/islem.aspx?p=aktivasyon" target="_self" method="post" novalidate="novalidate">
+                                    <form id="form" action="https://portal.gomail.com.tr/islem.aspx?p=aktivasyon" target="_self" method="post" novalidate="novalidate">
                                         <div class="row">
 
                                             <div class="col col-md-12 col-sm-12 col-xs-12">
