--- a/iletisim.html
+++ b/iletisim.html
@@ -187,7 +187,7 @@
                         <div class="row">
                             <div class="col col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <h1>İletişim Formu</h1>
-                                <form id="form" action="https://portal.gomail.com.tr/iletisimgomail/islem.aspx?p=iletisim" target="_self" method="post" novalidate="novalidate">
+                                <form id="form" action="https://portal.gomail.com.tr/islem.aspx?p=iletisim" target="_self" method="post" novalidate="novalidate">
                                     <div class="row">
                                         <div class="col col-md-6 col-sm-12 col-xs-12">
                                             <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Ad" data-val-required="&lt;img src=&#39;images/Validate.png&#39; style=&#39;margin-top: 13px;&#39; /&gt;" data-val="true">
