--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ alınabilir.</p>
             <p>Avantajlı fırsatlardan haberdar olmak için e-bültenimize abone olun.</p>
             <!-- newsletter-form -->
             <div id="newsletter-form">
-                <form id="form" action="https://portal.gomail.com.tr/iletisimgomail/islem.aspx?p=abone" method="post" novalidate="novalidate">
+                <form id="form" action="https://portal.gomail.com.tr/islem.aspx?p=abone" method="post" novalidate="novalidate">
                     <input class="arama" id="txtEposta" name="txtEposta" autocomplete="off" type="text" maxlength="70" placeholder="E-Posta Adresi">
                     <button class="getir btn btn-blue">Kayıt Ol</button>
                 </form>
