--- a/kayit.html
+++ b/kayit.html
@@ -199,7 +199,7 @@
                             <div class="tab-pane animated fadeIn active in" id="kayitol">
 
                                 <div id="register-form-container">
-                                    <form id="form" action="https://portal.gomail.com.tr/iletisimgomail/islem.aspx?p=kayit" method="post" novalidate="novalidate">
+                                    <form id="form" action="https://portal.gomail.com.tr/islem.aspx?p=kayit" method="post" novalidate="novalidate">
                                         <div class="row">
 
                                             <div class="col col-md-12 col-sm-12 col-xs-12">
